{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 58,
  "lineage": "1392fd98-135d-f734-7f9e-1ac8558af903",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "panda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:821243693278:instance/i-0a0e9ab4fada25421",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a0e9ab4fada25421",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "panda-core-7",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0429eb6a18ffe354a",
            "private_dns": "ip-10-83-0-212.ec2.internal",
            "private_ip": "10.83.0.212",
            "public_dns": "ec2-18-234-85-90.compute-1.amazonaws.com",
            "public_ip": "18.234.85.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0465ddf954d3a9572",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c5217261d1865d71",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a52640020ebb419e"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-pub",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e67e426f25ce0d7",
            "arn": "arn:aws:ec2:us-east-1:821243693278:instance/i-048eec1b72f4b2efd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-048eec1b72f4b2efd",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "panda-core-7",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07583f27570b34d4b",
            "private_dns": "ip-10-83-1-224.ec2.internal",
            "private_ip": "10.83.1.224",
            "public_dns": "ec2-52-207-82-171.compute-1.amazonaws.com",
            "public_ip": "52.207.82.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00cbb12d4425e5c61",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0084e4398a879e536",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a52640020ebb419e"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-pub",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821243693278:internet-gateway/igw-03912799eec53814b",
            "id": "igw-03912799eec53814b",
            "owner_id": "821243693278",
            "vpc_id": "vpc-0771c4775cd7b2808"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:821243693278:loadbalancer/app/alb/612ba2131f36a091",
            "arn_suffix": "app/alb/612ba2131f36a091",
            "dns_name": "alb-1549399253.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:821243693278:loadbalancer/app/alb/612ba2131f36a091",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "security_groups": [
              "sg-0a52640020ebb419e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0084e4398a879e536"
              },
              {
                "subnet_id": "subnet-0c5217261d1865d71"
              }
            ],
            "subnets": [
              "subnet-0084e4398a879e536",
              "subnet-0c5217261d1865d71"
            ],
            "vpc_id": "vpc-0771c4775cd7b2808",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg-pub",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:821243693278:listener/app/alb/612ba2131f36a091/6d658e3f8d74cc9c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:821243693278:targetgroup/tg/39e537ee62031d53",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:821243693278:listener/app/alb/612ba2131f36a091/6d658e3f8d74cc9c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:821243693278:loadbalancer/app/alb/612ba2131f36a091",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.tg",
            "aws_security_group.sg-pub",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:821243693278:targetgroup/tg/39e537ee62031d53",
            "arn_suffix": "targetgroup/tg/39e537ee62031d53",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:821243693278:targetgroup/tg/39e537ee62031d53",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0771c4775cd7b2808"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-attch",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:821243693278:targetgroup/tg/39e537ee62031d53-20220314174806896600000003",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:821243693278:targetgroup/tg/39e537ee62031d53",
            "target_id": "i-0a0e9ab4fada25421"
          },
          "dependencies": [
            "aws_instance.panda",
            "aws_lb_target_group.tg",
            "aws_security_group.sg-pub",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:821243693278:targetgroup/tg/39e537ee62031d53-20220314174806842300000002",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:821243693278:targetgroup/tg/39e537ee62031d53",
            "target_id": "i-048eec1b72f4b2efd"
          },
          "dependencies": [
            "aws_instance.panda",
            "aws_lb_target_group.tg",
            "aws_security_group.sg-pub",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0013b85a2b7af3edc",
            "owner_id": "821243693278",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03912799eec53814b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-pub"
            },
            "vpc_id": "vpc-0771c4775cd7b2808"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5036ee8acaad44a",
            "route_table_id": "rtb-0013b85a2b7af3edc",
            "subnet_id": "subnet-0c5217261d1865d71"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f157090b2ec8ea0",
            "route_table_id": "rtb-0013b85a2b7af3edc",
            "subnet_id": "subnet-0084e4398a879e536"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821243693278:security-group/sg-0a52640020ebb419e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0a52640020ebb419e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220314174647698800000001",
            "name_prefix": "terraform-",
            "owner_id": "821243693278",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0771c4775cd7b2808"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821243693278:subnet/subnet-0c5217261d1865d71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.83.0.0/24",
            "id": "subnet-0c5217261d1865d71",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "821243693278",
            "vpc_id": "vpc-0771c4775cd7b2808"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821243693278:subnet/subnet-0084e4398a879e536",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.83.1.0/24",
            "id": "subnet-0084e4398a879e536",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "821243693278",
            "vpc_id": "vpc-0771c4775cd7b2808"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821243693278:vpc/vpc-0771c4775cd7b2808",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.83.0.0/16",
            "default_network_acl_id": "acl-075205b1382459c39",
            "default_route_table_id": "rtb-03b4d72f3194c3635",
            "default_security_group_id": "sg-010f8d391f4e18032",
            "dhcp_options_id": "dopt-05bef0b2d0242a6ba",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0771c4775cd7b2808",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03b4d72f3194c3635",
            "owner_id": "821243693278",
            "tags": {
              "Name": "Terraform VPC"
            },
            "tags_all": {
              "Name": "Terraform VPC"
            }
          }
        }
      ]
    }
  ]
}